// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Extensions > matches snapshot with mixed extensions (info + error) 1`] = `
<DocumentFragment>
  <nav
    aria-label="Extensions"
    class="max-h-[calc(100vh-116px)] overflow-x-hidden overflow-y-auto flex flex-col p-4"
  >
    <div
      class="flex flex-col items-stretch gap-3"
    >
      <button
        class="w-full min-h-[1.6rem] box-border cursor-pointer text-left px-2 py-1 rounded hover:bg-accent"
        tabindex="0"
        type="button"
      >
        alpha
      </button>
      <button
        class="w-full min-h-[1.6rem] box-border cursor-pointer text-left px-2 py-1 rounded hover:bg-accent"
        tabindex="0"
        type="button"
      >
        beta
      </button>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`Extensions > matches snapshot with no extensions 1`] = `
<DocumentFragment>
  <nav
    aria-label="Extensions"
    class="max-h-[calc(100vh-116px)] overflow-x-hidden overflow-y-auto flex flex-col p-4"
  >
    <div
      class="flex flex-col items-stretch gap-3"
    />
  </nav>
</DocumentFragment>
`;
